Fixed six homework.